<resources>
    <string name="app_name">Android-Developer-Fundamentals</string>
    <string name="hello_toast">Hello Toast!</string>
    <string name="count">Count</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
    <string name="article_title">Beatles Anthology Vol. 1</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
\n\n
This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on the bootleg <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
\n\n
<b>Highlights include:</b>
\n\n
<b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the bootleg road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
\n\n
<b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
\n\n
<b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on bootlegs featuring the Dead joined by the Beach Boys!
\n\n
<b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
\n\n
<b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
\n\n
<b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
\n\n
<b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
</string>
    <string name="toast_activity">Toast Activity</string>
    <string name="keyboard_activity">Keyboard Activity</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="show">show</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_picker">datePicker</string>
    <string name="recyclerview_activity">RecyclerView Activity</string>

    <string name="instructions">Enter a book name, or part of a book name, or just some text from a book to find
    the full book title and who wrote the book!</string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Enter a Book Title</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="no_results">No Results Found</string>
    <string name="loading">Loading…</string>
    <string name="asyncloader">AsyncLoader</string>
    <string name="rxjava">RxJava</string>
    <string name="database">Database</string>
    <string name="search">Search Sqlite</string>
    <string name="search_the_database">Search the database</string>
    <string name="search_room">Search Room</string>
    <string name="alarm_activity">Alarm Activity</string>
    <string name="start_alarm">Start Alarm</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="job_activity">Job Activity</string>
    <string name="provider_activity">Provider Activity</string>
    <string name="anko_activity">Anko Activity</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="dial">dial</string>
    <string name="enter_message_for_sms">Enter message for SMS</string>
    <string name="phone_activity">Phone Activity</string>
    <string name="sensor_activity">Sensor Activity</string>
    <string name="sensor_data">Sensor Data</string>
    <string name="get_location">Get Location</string>
    <string name="location_activity">Location Activity</string>

    <string-array name="words">
        <item>Android</item>
        <item>Activity</item>
        <item>ContentProvider</item>
        <item>ContentResolver</item>
    </string-array>

    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f \n Timestamp: %3$tr"</string>
    <string name="no_location_available">No location available</string>
    <string name="user_location">User Location</string>
    <string name="get_address">Get Address</string>
    <string name="address_not_found">Address was not found</string>
    <string name="user_address">User Address</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="custom_view_activity">Custom View Activity</string>
    <string name="canvas_activity">Canvas Activity</string>


    <string name="keep_tapping">Keep tapping.</string>
    <string name="done">Done!</string>
    <string name="draw_canvas">Draw Canvas</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="clipping">Clipping</string>
    <string name="clippped_activity">Clippped Activity</string>
    <string name="skewed">This is the text</string>
    <string name="surfaceview_activity">SurfaceView Activity</string>
    <string name="animation_activity">Animation Activity</string>
    <string name="physics_animation">Physics Animation</string>
    <string name="stretch">Stretch</string>
    <string name="spring">Spring</string>
    <string name="fling">Fling</string>
</resources>
