<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gooner10.androiddeveloperfundamentals.database.DatabaseActivity">

    <TextView
        android:id="@+id/wordListText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        tools:text="@string/article_title" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_the_database"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordListText"
        tools:text="@string/article_title" />

    <Button
        android:id="@+id/searchDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchWord"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

    <Button
        android:id="@+id/searchRoomDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchWord"
        android:text="@string/search_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchDb" />

</android.support.constraint.ConstraintLayout>
